<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/faqDisp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/faqmItem"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quest1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/quest1Val"
                    android:layout_marginBottom="8dp"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/ans1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/ans1Val"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quest2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/quest2Val"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/ans2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/ans2Val"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="italic"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quest3Disp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/quest3Val"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/ans3Disp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:text="@string/ans3Val"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quest4Disp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/quest4Val"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/ans4Disp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:text="@string/ans4Val"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quest5Disp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/quest5Val"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/ans5Disp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:text="@string/ans5Val"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quest6Disp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/quest6Val"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/ans6Disp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:text="@string/ans6Val"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quest7Disp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/quest7Val"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/ans7Disp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:text="@string/ans7Val"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quest8Disp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/quest8Val"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/ans8Disp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:text="@string/ans8Val"
                    android:textSize="18sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/quest9Disp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/quest9Val"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/ans9Disp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/colorAccent"
                    android:textStyle="italic"
                    android:text="@string/ans9Val"
                    android:textSize="18sp"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>