<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.adfinancegh.aedmoneylending.CustHist">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="77dp"
                android:text="@string/histVal"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:textColor="@color/white"
                android:id="@+id/histGroup"
                >

                <RadioButton
                    android:id="@+id/newCustRbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:checked="true"
                    android:onClick="newCustClicked"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/white"
                    android:text="@string/newCust"/>

                <RadioButton
                    android:id="@+id/retCustRbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:textColor="@color/white"
                    android:onClick="retCustClicked"
                    android:text="@string/retCust"/>

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/histEmailAddrLayout"
                android:textColorHint="@color/white"
                android:visibility="invisible"
                >

                <EditText
                    android:id="@+id/histemailAddr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/emailVal"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    />


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/histpWordLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/white"

                android:visibility="invisible">

                <EditText
                    android:id="@+id/histpWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/passVal"
                    android:imeActionId="@+id/hist_form_finished"
                    android:imeActionLabel="@string/proceedVal"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"/>


            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/histnextBtn"
                android:fontFamily="sans-serif-condensed"
                android:onClick="histNextBtnClicked"
                android:layout_marginTop="100dp"
                android:text="@string/nextVal"/>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
