<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adfinancegh.aedmoneylending.loan_step1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            app:contentPadding="15dp"
            app:cardBackgroundColor="@color/lavenderblush"
            android:elevation="3dp"
            app:cardCornerRadius="12dp"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/black"
                android:id="@+id/fNameLayout"
                android:layout_marginTop="10dp"
                >

                <EditText
                    android:id="@+id/fName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/fname"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textPersonName"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mNameLayout"
                android:textColorHint="@color/black"
                >

                <EditText
                    android:id="@+id/mName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/mname"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textPersonName"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lNameLayout"
                android:textColorHint="@color/black"
                >

                <EditText
                    android:id="@+id/lName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/lname"
                    android:imeOptions="actionNext"
                    android:inputType="textCapWords|textPersonName"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/telNoLayout"
                android:textColorHint="@color/black"
                >

                <EditText
                    android:id="@+id/telNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/mNumber"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/emailAddrLayout"
                android:textColorHint="@color/black"
                >

                <EditText
                    android:id="@+id/emailAddr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/emailVal"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/pWordLayout"
                android:textColorHint="@color/black"
                android:layout_marginBottom="30dp"
                >

                <EditText
                    android:id="@+id/pWord"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/passVal"
                    android:imeActionId="@+id/loanStep1_form_finished"
                    android:imeActionLabel="@string/proceedVal"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>


            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nextBtn"
                android:fontFamily="sans-serif-condensed"
                android:onClick="nextBtnClicked"
                android:background="@color/thistle"
                android:text="@string/nextVal"/>
        </LinearLayout>
        
         </android.support.v7.widget.CardView>
        </LinearLayout>

    </ScrollView>
</RelativeLayout>
